kubernetes_deployment/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/wit_network: "true"
        io.kompose.service: web
    spec:
      containers:
      - args:
        - sh
        - -c
        - python ./manage.py migrate && python ./server.py
        image: bk369/wit_hackathon:web2
        imagePullPolicy: ""
        name: web
        ports:
        - containerPort: 7000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
