kubernetes_deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "7500"
    port: 7500
    targetPort: 7500
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
