kubernetes_deployment/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: "7000"
    port: 7000
    targetPort: 7000
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
