kubernetes_deployment/wit_network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: wit_network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/wit_network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/wit_network: "true"
